2015-09-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (CDC_CTRL_DTR): New.
	(usb_cb_ctrl_write_finish): Distinguish DTR accurately.

2015-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.3.

	* tool/neug_upgrade.py (neug.download, neug.execute)
	(regnual.download): Python3 fix.

	* tool/neug_check.py (main): Python3 fix.

2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (output_vendor_product_serial_strings): Fix sed
	script when string is short.  Remove empty line.
	* fraucheky: Update to 0.3.
	* chopstx: Update to 0.08.

2015-07-30  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.h (BOARD_ID_ST_NUCLEO_F103, BOARD_ID_ST_DONGLE): New.
	* src/adc_stm32f103.c (get_adc_config): Add ST Dongle and ST
	Nucleo support.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c: Update from Gnuk.
	* src/usb_lld.h: Ditto.
	* src/main.c (usb_cb_ctrl_write_finish, vcom_port_data_setup)
	(usb_cb_setup, usb_cb_get_descriptor, usb_cb_interface): Follow
	the API change of USB driver.
	(FSIJ_DEVICE_NEUG_FRAUCHEKY_REQUESTED): New.
	(NEUG_SPECIAL_BITRATE): New.
	(usb_cb_ctrl_write_finish, main): Special bitrate to invoke
	Fraucheky manually.

2015-07-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (nl): New.  '\n' in sed replacement text is not
	portable and break FreeBSD or MacOS X built.
	Reported by Kenji Rikitake.

2015-07-18  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.2.

2015-07-16  Niibe Yutaka  <gniibe@fsij.org>

	* src/config.h.in (@TARGET_DEFINE@): Remove.
	* src/configure [--with-dfu] (HEXOUTPUT_MAKE_OPTION): Enable .hex
	output.

2015-07-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.h: Update from Gnuk.
	* src/usb_stm32f103.c: Likewise.
	* src/main.c (usb_cb_get_descriptor): Follow the change.

	* chopstx: Update to 0.07.
	* src/sys.c: Update to 2.1 from chopstx.
	* src/sys.h: Likewise.
	* tool/openocd-script: Fix for newer OpenOCD.

2015-07-14  Niibe Yutaka  <gniibe@fsij.org>
