@@ -2,6 +2,7 @@
 
 	* src/main.c (CDC_CTRL_DTR): New.
 	(usb_cb_ctrl_write_finish): Distinguish DTR accurately.
+	(usb_cb_device_reset): Notify upper layer.
 
 2015-08-03  Niibe Yutaka  <gniibe@fsij.org>
 
